Fix intro spacing under name

--- a/css/home.css
+++ b/css/home.css
@@ -300,7 +300,7 @@ main .intro{
 
   .intro h2{
     font-size: 1.5rem;
-    margin: 2rem 0rem 0rem 0rem;
+    margin: 1rem 0rem 0rem 0rem;
   }
 }
 
